--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -55,9 +55,8 @@
 
 .reseaux-sociaux {
   width: 90%;
-  height: 6vh;
-  margin: 0px 0px 1vh 2px;
-  
+  height: auto;
+  margin: 0px 0px 5vh 2px;  
   ul {
     list-style: none;
     display: flex;
