--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,7 +9,7 @@
 
 body {
   font-family: "Geneva", Tahoma, sans-serif;
-  color: $colour-primary;
+  // color: $colour-primary;
   font-size: 2rem;
   font-weight: 100;
   line-height: 1.7;
