--- a/sass/components/_darkmodeinput.scss
+++ b/sass/components/_darkmodeinput.scss
@@ -1,5 +1,5 @@
 .nav {
-  @include media(mobile) {
+  @include media("dekstop") {
     .darkmode {
       display: flex;
       flex-direction: column;
