--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -1,7 +1,7 @@
 .hamburger {
   padding: 0 0 15px 0;
   .hamburger-toggle {
-    @include media(mobile) {
+    @include media("dekstop") {
       visibility: visible;
       z-index: 99;
     }
