--- a/sass/components/_loading.scss
+++ b/sass/components/_loading.scss
@@ -11,7 +11,7 @@
       font-weight: 900;
       align-items: center;
       position: absolute;
-      @include media(mobile) {
+      @include media("dekstop") {
         color: black;
         font-size: medium;
         font-weight: 900;
@@ -25,7 +25,7 @@
     position: fixed; /* or absolute */
     top: 25%;
     left: 45%;
-    @include media(mobile) {
+    @include media("dekstop") {
       top: 25%;
       left: 45%;
     }
@@ -39,7 +39,7 @@
     border-radius: 25%;
     transform: rotate(0.16turn);
     animation: loading--spin 1s ease infinite;
-    @include media(mobile) {
+    @include media("dekstop") {
       width: 70px;
       height: 70px;
       border-radius: 25%;
@@ -55,7 +55,7 @@
   border-radius: 50%;
   transform: rotate(1turn);
   animation: loading--spin 0.3s ease infinite;
-  @include media(mobile) {
+  @include media("dekstop") {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -66,7 +66,7 @@
   position: fixed; /* or absolute */
   top: 25.5%;
   left: 46.5%;
-  @include media(mobile) {
+  @include media("dekstop") {
     top: 25.5%;
     left: 46.5%;
   }
