--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,7 +29,7 @@
       height: auto !important;
       // min-height: 11.5vh;
       margin: 0px 0 -39px 0;
-      @include media(smallMobile) {
+      @include media("dekstop") {
         height: auto !important;
         // min-height: 11vh;
         margin: 0px 0 -33px 0;
@@ -40,7 +40,7 @@
           color: #ffffff;
         }
         h1 {
-          @include media(smallMobile) {
+          @include media("mobile") {
             font-size: 23.4pt;
           }
         }
@@ -48,6 +48,9 @@
           margin: -10px 0px 0px 3px;
           font-size: medium;
           color: #dadada;
+          @include media(mobile) {
+            font-size: medium;
+          }
         }
       }
     }
@@ -79,7 +82,7 @@
   }
   // Pour overlay fontawesome tech
   .container-overlay {
-    @include media(mobile) {
+    @include media("dekstop") {
       display: flex;
       flex-direction: column;
       span {
@@ -199,7 +202,20 @@
     width: 100%;
     z-index: 99;
     height: auto;
-    margin: 0 0 3vh 0;
+    margin: 3vh 0 3vh 0;
+    .currentTime {
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+      // color: white;
+      &__element {
+        font-size: small;
+        &--modifier {
+          color: white;
+        }
+      }
+    }
+
     .nav {
       display: flex;
       align-items: center;
