--- a/sass/utils/_breakpoints.scss
+++ b/sass/utils/_breakpoints.scss
@@ -1,9 +1,9 @@
 // Pour les ecrans
 $breakpoints: (
-  "smallMobile": 408.98px,
-  "mobile": 575.98px,
-  "tablet": 767.98px,
-  "dekstop": 991.98px,
-  "LGdekstop": 1199.98px,
+  'smallMobile': 408.98px,
+  'mobile': 575.98px,
+  'tablet': 767.98px,
+  'dekstop': 991.98px,
+  'LGdekstop': 1199.98px,
   // "XLdekstop": 1399px,
 ) !default;
