--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -92,9 +92,8 @@
         }
       }
       li {
-        border-bottom: 1px solid $coulour-li-border-bottom;
+        border-bottom: 1px solid #7a7a7a;
         padding: 20px;
-        width: 100%;
         list-style: none;
         cursor: pointer;
         overflow: hidden;
