--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -71,9 +71,9 @@
 // Nav IconList
 
 .reseaux-sociaux {
-  width: 90%;
+  width: 100%;
   height: auto;
-  margin: 0px 0px 5vh 2px;
+  margin: -5vh 0px 5vh 2px;
   ul {
     list-style: none;
     display: flex;
