--- a/sass/components/_hamburgerBtn.scss
+++ b/sass/components/_hamburgerBtn.scss
@@ -1,13 +1,17 @@
 .hamburger {
-  padding: 0 0 15px 0;
-  .hamburger-toggle {
-    @include media("dekstop") {
-      visibility: visible;
-      z-index: 99;
+  display: none;
+  @include media(dekstop) {
+    display: block;
+    padding: 0 0 15px 0;
+    .hamburger-toggle {
+      @include media("dekstop") {
+        visibility: visible;
+        z-index: 99;
+      }
+      @include hamburgerBtnFalse;
     }
-    @include hamburgerBtnFalse;
-  }
-  .opened {
-    @include hamburgerBtnTrue;
+    .opened {
+      @include hamburgerBtnTrue;
+    }
   }
 }
