--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,19 +1,28 @@
-#navId {
-  display: none;
-}
 .nav {
+  display: none;
+  ul {
+    li {
+      margin: 0px 0 0px 0px;
+      width: 100%;
+    }
+    .icon {
+      margin: 0 5px 2px 0px;
+    }
+  }
   @include media("dekstop") {
     display: none;
     margin: 0 0 0 -10px;
   }
 }
 .nav-open {
+  display: none;
   @include media("dekstop") {
+    display: block;
     @include navOpenClose;
+    @include nav;
     animation: nav--open 1s ease-in-out 0s 1 normal forwards;
     @include drapeaulangue;
     ul {
-      display: block;
       li {
         margin: 0px 0 0px 0px;
         width: 100%;
@@ -36,12 +45,14 @@
 // animation: nav--close 1s ease-in-out 0s 1 normal forwards;
 
 .nav-close {
+  display: none;
   @include media("dekstop") {
+    display: block;
     @include navOpenClose;
+    @include nav;
     animation: nav--close 1s ease-in-out 0s 1 normal forwards;
     @include drapeaulangue;
     ul {
-      display: block;
       li {
         width: 97.5%;
         margin: 0px 0 0px 10px;
@@ -68,6 +79,27 @@
   }
 }
 
+// Nav desktop
+
+.nav-desktop {
+  @include media("dekstop") {
+    display: none;
+  }
+  display: block;
+  @include nav-desktop;
+  .a {
+    width: 62vh;
+  }
+  ul {
+    .icon {
+      margin: 0 5px 2px 0px;
+    }
+  }
+}
+
+.image { // dreapeau france nav
+  width: 6%;
+}
 // Nav IconList
 
 .reseaux-sociaux {
@@ -88,7 +120,6 @@
       color: white;
       padding: 0px 10px;
       display: inline-block;
-      border-radius: 25%;
     }
   }
 }
