time color change with setTimeout

--- a/sass/components/_darkmodeinput.scss
+++ b/sass/components/_darkmodeinput.scss
@@ -17,5 +17,16 @@
 }
 
 .nav-desktop {
+  display: block;
   @include darkmode;
+  .darkmode {
+    color: $colour-text-light;
+    .toggleBtn {
+      border: 3px solid #9e9191;
+      &::before {
+        background-color: #9e9191;
+      }
+    }
+    @include darkmode-animation;
+  }
 }
