--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9203,6 +9203,9 @@ button {
   }
 }
 
+.nav-desktop {
+  display: block;
+}
 .nav-desktop .darkmode {
   display: flex;
   flex-direction: column;
@@ -9237,6 +9240,27 @@ button {
   display: block;
   margin: 1px 0 0 0;
   cursor: pointer;
+}
+.nav-desktop .darkmode {
+  color: #3bc1b0;
+}
+.nav-desktop .darkmode .toggleBtn {
+  border: 3px solid #9e9191;
+}
+.nav-desktop .darkmode .toggleBtn::before {
+  background-color: #9e9191;
+}
+.nav-desktop .darkmode input:checked + .toggleBtn {
+  background-color: #1e2a3a;
+  border: 3px solid #6c51a4;
+}
+.nav-desktop .darkmode input:checked + .toggleBtn::before {
+  animation: darkmode-active 0.4s ease-in-out 0s 1 normal forwards;
+  margin: 1px 0 0px -2px;
+  background-color: #6c51a4;
+}
+.nav-desktop .darkmode input:not(:checked) + .toggleBtn::before {
+  animation: darkmode-desactive 0.4s ease-in-out 0s 1 normal forwards;
 }
 
 .container-header {
